@@ -11,6 +11,7 @@
 
 1.9 beta 7 (2011-07-??)
  ! Calculation problem in MGMaps atlas format (fix by Pierre-Luc Paour)
+ ! Custom mapsource from RMaps SQLite atlas shows wrong zoom levels 
 
 1.9 beta 6 (2011-06-21)
  + New atlas format: Geocaching Live offline maps
